Added package to load env vars

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Indranil Sen",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^2.0.0",
     "ejs": "^2.4.2",
     "express": "^4.14.0",
     "instagram-node": "^0.5.8"
